# alhazen-skill-examples

./: Makefile  README.md
.claude-plugin/: marketplace.json
demo/: Dockerfile  docker-compose.yml  package.json  skills.config.ts
demo/src/app/: (jobhunt)  (techrecon)  layout.tsx  page.tsx
demo/src/app/api/: jobhunt  techrecon
demo/src/components/: jobhunt  techrecon
demo/src/lib/: jobhunt.ts  techrecon.ts
plugins/jobhunt/.claude-plugin/: plugin.json
plugins/jobhunt/hooks/: hooks.json
plugins/jobhunt/skills/jobhunt/: SKILL.md  USAGE.md  (+2 more)
skills/biomed/alg-precision-therapeutics/: README.md  SKILL.md  USAGE.md  alg_precision_therapeutics.py  pyproject.toml  schema.tql  skill.yaml
skills/biomed/apm/: pyproject.toml
skills/biomed/epmc-search/: pyproject.toml
skills/biomed/literature/: SKILL.md  USAGE.md  literature.py  skill.yaml
skills/biomed/literature-trends/: SKILL.md  literature_trends.py  pyproject.toml  schema.tql
skills/biomed/scientific-literature/: SKILL.md  scientific_literature.py
skills/core/alhazen-core/: USAGE.md  alhazen_core.py
skills/demo/jobhunt/: SKILL.md  USAGE.md  embedding_map.py  job_forager.py  jobhunt.py  pyproject.toml  schema.tql
skills/demo/techrecon/: USAGE.md  pyproject.toml  schema.tql  techrecon.py
skills/demo/they-said-whaaa/: they_said_whaaa.py
skills/health/coach/: coach.py  pyproject.toml  schema.tql
skills/journalism/they-said-whaaa/: SKILL.md  pyproject.toml  they_said_whaaa.py
skills/journalism/they-said-whaaa/.claude-plugin/: plugin.json
skills/journalism/they-said-whaaa/hooks/: hooks.json
(+42 files in other folders)
