[project]
name = "alhazen-skill-they-said-whaaa"
version = "0.1.0"
description = "Credibility and consistency tracking skill for the Alhazen knowledge notebook framework"
requires-python = ">=3.11"
dependencies = [
    "typedb-driver>=3.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
youtube = [
    "youtube-transcript-api>=0.6.0",
]

[tool.uv]
dev-dependencies = []
